--- a/.github/workflows/verify_solutions.yml
+++ b/.github/workflows/verify_solutions.yml
@@ -10,4 +10,5 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - run: ./verify_solutions.sh
+      - name: Verify solutions
+        run: ./verify_solutions.sh
