--- a/.github/workflows/generate_and_verify.yml
+++ b/.github/workflows/generate_and_verify.yml
@@ -5,7 +5,7 @@ on:
   push:
 
 jobs:
-  verify-solutions:
+  generate-verify-solutions:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
